--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+	<base href="https://yousufsa.github.io/khanswedding/">
 	</head>
 	<body>
 		
