whatsapp article img

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 							</div>
 							<div class="the-heart-attending-content-inner-bottom">
 								<h2>Save the date</h2>
-								<a href="whatsapp://send?text=Khan's%20wedding%20-%20Khaleel%20weds%20Javeria%0A%0Ahttps://yousufsa.github.io/khanswedding/" data-action="share/whatsapp/share" data-text="Take a look at this awesome website:" data-href="" class="wa_btn wa_btn_s the-heart-btn simple-btn">Share On WhatsApp</a>
+								<a href="whatsapp://send?text=Khan's%20wedding%20-%20Khaleel%20weds%20Javeria%0A%0Ahttps://yousufsa.github.io/khanswedding/docs/" data-action="share/whatsapp/share" data-text="Take a look at this awesome website:" data-href="" class="wa_btn wa_btn_s the-heart-btn simple-btn">Share On WhatsApp</a>
 							</div>
 						</div> <!-- .the-heart-attending-content-inner END -->
 					</div> <!-- .the-heart-attending-content END -->
