--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta property="og:type" content="article" />
 			<meta name="author" content="YousufSA">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" type="image/png" href="assets/favicon.ico"/>
+        <link rel="shortcut icon" type="image/png" href="https://yousufsa.github.io/khanswedding/docs/assets/favicon.ico"/>
 		<link href="https://fonts.googleapis.com/css?family=Great+Vibes%7CRoboto:100,300,400,700,900" rel="stylesheet">
 
 
@@ -70,7 +70,7 @@
 	</header> <!-- .the-heart-menu-and-logo-section END -->
 
 	<!-- The Heart Welcome Section -->
-	<section class="the-heart-welcome-section jarallax black-overly vegas-container" id="loded" style="height: 744px;"><div class="vegas-slide vegas-transition-fade vegas-transition-fade-in vegas-transition-fade-out" style="transition: all 1000ms ease 0s;"><div class="vegas-slide-inner vegas-animation-kenburnsLeft" style="background-image: url(&quot;assets/img/accommodation-bg.jpg&quot;); background-color: rgba(0, 0, 0, 0); background-position: center center; background-size: cover; animation-duration: 5000ms;"></div></div><div class="vegas-slide vegas-transition-fade vegas-transition-fade-in" style="transition: all 1000ms ease 0s;"><div class="vegas-slide-inner vegas-animation-kenburnsLeft" style="background-image: url(&quot;assets/img/the-heart-welcome-bg.jpg&quot;); background-color: rgba(0, 0, 0, 0); background-position: center center; background-size: cover; animation-duration: 5000ms;"></div></div><div class="vegas-timer vegas-timer-running"><div class="vegas-timer-progress" style="transition-duration: 4900ms;"></div></div><div class="vegas-wrapper" style="overflow: visible; padding: 0px;"><div class="container">
+	<section class="the-heart-welcome-section jarallax black-overly vegas-container" id="loded" style="height: 744px;"><div class="vegas-slide vegas-transition-fade vegas-transition-fade-in vegas-transition-fade-out" style="transition: all 1000ms ease 0s;"><div class="vegas-slide-inner vegas-animation-kenburnsLeft" style="background-image: url(&quot;https://yousufsa.github.io/khanswedding/docs/assets/img/accommodation-bg.jpg&quot;); background-color: rgba(0, 0, 0, 0); background-position: center center; background-size: cover; animation-duration: 5000ms;"></div></div><div class="vegas-slide vegas-transition-fade vegas-transition-fade-in" style="transition: all 1000ms ease 0s;"><div class="vegas-slide-inner vegas-animation-kenburnsLeft" style="background-image: url(&quot;https://yousufsa.github.io/khanswedding/docs/assets/img/the-heart-welcome-bg.jpg&quot;); background-color: rgba(0, 0, 0, 0); background-position: center center; background-size: cover; animation-duration: 5000ms;"></div></div><div class="vegas-timer vegas-timer-running"><div class="vegas-timer-progress" style="transition-duration: 4900ms;"></div></div><div class="vegas-wrapper" style="overflow: visible; padding: 0px;"><div class="container">
 				<div class="row">
 					<div class="the-heart-welcome-tbl">
 						<div class="the-heart-welcome-tbl-c">
@@ -173,7 +173,7 @@
 
 	<!-- The Heart Wedding Venue -->
 	<section id="our-story" class="the-heart-paper-effect-bg">
-		<div class="the-heart-wedding-venue-section" id="the-heart-wedding-venue" style="background-image: url(assets/img/shardayyy-photography-113795-unsplash.jpg);">
+		<div class="the-heart-wedding-venue-section" id="the-heart-wedding-venue" style="background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/shardayyy-photography-113795-unsplash.jpg);">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-sm-12 col-xs-12">
@@ -264,7 +264,7 @@
 
 	<!-- The Heart Our Lovely Gallery -->
 	<section class="the-heart-paper-effect-bg" id="the-heart-gallery">
-		<div class="the-heart-lovely-gallery-section" style="background-image: url(assets/img/gallery-bg.jpg);">
+		<div class="the-heart-lovely-gallery-section" style="background-image: url(https://yousufsa.github.io/khanswedding/docs/assets/img/gallery-bg.jpg);">
 			<div class="container">
 				<div class="the-heart-section-heading">
 					<h4>Our</h4>
