--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 								</div> <!-- .the-heart-wedding-venue END -->
 							</div> <!-- .the-heart-wedding-time-schedule END -->
 
-							<a href="http://bit.ly/2x2hB1n" title="Golden Palace Convention Centre" target="_blank">Get direction <i class="fas fa-search-location"></i></a>
+							<a href="http://bit.ly/2x2hB1n" title="Golden Palace Convention Centre" target="_blank">Get direction</a>
 						</div> <!-- .the-heart-wdding-venu-content END -->
 					</div>
 					<div class="col-md-6 col-sm-12 col-xs-12">
@@ -238,7 +238,7 @@
 								</div> <!-- .the-heart-wedding-venue END -->
 							</div> <!-- .the-heart-wedding-time-schedule END -->
 
-							<a href="http://bit.ly/2FlpWSf" title="JC CONVENTION CENTRE" target="_blank">Get direction <i class="fas fa-search-location"></i></a>
+							<a href="http://bit.ly/2FlpWSf" title="JC CONVENTION CENTRE" target="_blank">Get direction </a>
 						</div> <!-- .the-heart-wdding-venu-content END -->
 					</div>
 				</div>
@@ -312,22 +312,6 @@
 								</figure> <!-- .the-heart-single-gallery END -->
 							</a>
 						</div> <!-- .the-heart-gallery-item END -->
-
-						 <!--<div class="the-heart-gallery-item" style="width: 380px; position: absolute; left: 0px; top: 337px;">
-							<a class="the-heart-popup" href="https://yousufsa.github.io/khanswedding/docs/assets/gallery-5.png">
-								<figure class="the-heart-single-gallery">
-									<img src="https://yousufsa.github.io/khanswedding/docs/assets/gallery-5.png" alt="The Heart Gallery Image" title="The Heart Gallery Image">
-								</figure> 
-							</a>
-						</div>
-
-						<div class="the-heart-gallery-item" style="width: 380px; position: absolute; left: 380px; top: 410px;">
-							<a class="the-heart-popup" href="https://yousufsa.github.io/khanswedding/docs/assets/gallery-6.png">
-								<figure class="the-heart-single-gallery">
-									<img src="https://yousufsa.github.io/khanswedding/docs/assets/gallery-6.png" alt="The Heart Gallery Image" title="The Heart Gallery Image">
-								</figure> 
-							</a>
-						</div>.the-heart-gallery-item END -->
 					</div>
 
 					<div class="the-heart-btn-holder">
