--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 					</div>
 
 					<div class="the-heart-btn-holder">
-						<a href="#" class="the-heart-btn pink-btn">See More Photo</a>
+						<a href="http://bit.ly/2KFBWCv" target="_blank" class="the-heart-btn pink-btn">See More Photo</a>
 					</div> <!-- .the-heart-btn-holder END -->
 				</div>
 			</div>
