--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html class="no-js" lang="eg"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Khan's Wedding - Khaleel & Javeria</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="Khan family's first wedding - Khaleel weds Javeria on the 4th August 2019">
+		<meta name="description" content="Join us in celebrating our love on the 4th August 2019">
 		<meta property="og:title" content="Khan's Wedding - Khaleel & Javeria" />
 		<meta property="og:url" content="https://yousufsa.github.io/khanswedding/docs" />
-		<meta property="og:description" content="Khan family's first wedding - Khaleel weds Javeria on the 4th August 2019">
+		<meta property="og:description" content="Join us in celebrating our love on the 4th August 2019">
 		<meta property="og:image" content="https://yousufsa.github.io/khanswedding/docs/assets/whatsapp-article-img.jpg">
 		<meta property="og:type" content="article" />
-			<meta name="author" content="YousufSA">
+        <meta name="author" content="YousufSA">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href="https://yousufsa.github.io/khanswedding/docs/assets/favicon.ico"/>
 		<link href="https://fonts.googleapis.com/css?family=Great+Vibes%7CRoboto:100,300,400,700,900" rel="stylesheet">
@@ -38,7 +38,6 @@
 		<!-- All Style Sheet End -->
 
 		<link rel="stylesheet" href="https://yousufsa.github.io/khanswedding/docs/assets/style.css">
-
 		<link rel="stylesheet" href="https://yousufsa.github.io/khanswedding/docs/assets/responsive.css">
 	<style type="text/css" id="jarallax-clip-1">#jarallax-container-1 {
    clip: rect(0 1440px 600px 0);
