--- a/index.html
+++ b/index.html
@@ -348,6 +348,14 @@
 	<script src="https://yousufsa.github.io/khanswedding/docs/assets/jarallax-element.js"></script>
 	<script src="https://yousufsa.github.io/khanswedding/docs/assets/jarallax-video.js"></script>
 	<script src="https://yousufsa.github.io/khanswedding/docs/assets/main.js"></script>
+    <script>
+         $(".the-heart-main-meun li").click(function () {
+                    if(screen.width <767){
+                    $('.the-heart-main-meun').slideUp();
+                    }
+                });
+    </script>
+    </body>
 
 	
 </html>
