--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html class="no-js" lang="eg"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Khan's Wedding - Khaleel & Javeria</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -147,7 +147,7 @@
 						<div class="the-heart-intruduction-content-txt" style="height: 350px;">
 							<h3>Khaleel Saleem Ayub</h3>
 							<h4>The Groom</h4>
-							<p>it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and </p>
+                            <p>A simple, true and a genuine soul chasing his dream to live a love filled life with his mate. <br/><small> - Javeria Jabeen </small></p>
 						</div> <!-- .the-heart-intruduction-content-txt END -->
 					</div> <!-- .the-heart-spilt-container END -->
 					<div class="the-heart-spilt-container">
@@ -207,7 +207,7 @@
 								</div> <!-- .the-heart-wedding-venue END -->
 							</div> <!-- .the-heart-wedding-time-schedule END -->
 
-							<a href="http://bit.ly/2x2hB1n" title="Golden Palace Convention Centre" target="_blank">Get direction</a>
+							<a href="http://bit.ly/2x2hB1n" title="Golden Palace Convention Centre" target="_blank">Get directions</a>
 						</div> <!-- .the-heart-wdding-venu-content END -->
 					</div>
 					<div class="col-md-6 col-sm-12 col-xs-12">
@@ -235,7 +235,7 @@
 								</div> <!-- .the-heart-wedding-venue END -->
 							</div> <!-- .the-heart-wedding-time-schedule END -->
 
-							<a href="http://bit.ly/2FlpWSf" title="JC CONVENTION CENTRE" target="_blank">Get direction </a>
+							<a href="http://bit.ly/2FlpWSf" title="JC CONVENTION CENTRE" target="_blank">Get directions </a>
 						</div> <!-- .the-heart-wdding-venu-content END -->
 					</div>
 				</div>
@@ -356,6 +356,4 @@
                 });
     </script>
     </body>
-
-	
 </html>
