--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html class="no-js" lang="eg"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Khan's Wedding - Khaleel & Javeria</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
