--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 						<div class="the-heart-intruduction-content-txt" style="height: 350px;">
 							<h3>Javeria Jabeen</h3>
 							<h4>The Bride</h4>
-							<p>She is more than what I had ever asked in my prayers and what I could ever get. I’m thankful to allah for blessing me with a partner like her.</p>
+							<p>She is more than what I had ever asked in my prayers and what I could ever get. I’m thankful to allah for blessing me with a partner like her. <br/><small> - Khaleel S A </small></p>
 						</div> <!-- .the-heart-intruduction-content-txt END -->
 					</div> <!-- .the-heart-spilt-container END -->
 					<div class="the-heart-spilt-container">
