--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 					</div>
 
 					<div class="the-heart-btn-holder">
-						<a href="http://bit.ly/2KFBWCv" target="_blank" class="the-heart-btn pink-btn">See More Photo</a>
+						<a href="http://bit.ly/2KFBWCv" target="_blank" class="the-heart-btn pink-btn">See More Photos</a>
 					</div> <!-- .the-heart-btn-holder END -->
 				</div>
 			</div>
